--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.0.5",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^19.0.0",
@@ -32,6 +33,7 @@
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "timescape": "^0.7.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
