--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cmdk": "1.0.0",
     "cookies-next": "^4.3.0",
     "date-fns": "^2.28.0",
+    "driver.js": "^1.3.5",
     "framer-motion": "^12.0.5",
     "jose": "^5.9.6",
     "lucide-react": "^0.474.0",
